// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateModelConfig no providers available returns ULTIMATE_FALLBACK for all agents and categories when no providers 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "do": {
      "model": "opencode/glm-4.7-free",
    },
    "research": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-free",
    },
    "deep": {
      "model": "opencode/glm-4.7-free",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models when only OpenAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "do": {
      "model": "opencode/glm-4.7-free",
    },
    "research": {
      "model": "opencode/gpt-5-nano",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-free",
    },
    "deep": {
      "model": "opencode/glm-4.7-free",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models when only Gemini is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "do": {
      "model": "opencode/glm-4.7-free",
    },
    "research": {
      "model": "opencode/gpt-5-nano",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-free",
    },
    "deep": {
      "model": "opencode/glm-4.7-free",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models from fallback chains when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "do": {
      "model": "opencode/glm-4.7-free",
    },
    "research": {
      "model": "opencode/gpt-5-nano",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-free",
    },
    "deep": {
      "model": "opencode/glm-4.7-free",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models when only OpenCode Zen is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "do": {
      "model": "opencode/kimi-k2.5",
    },
    "research": {
      "model": "opencode/claude-haiku-4-5",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/kimi-k2.5",
    },
    "deep": {
      "model": "opencode/kimi-k2.5",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/kimi-k2.5",
    },
    "ultrabrain": {
      "model": "opencode/kimi-k2.5",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "opencode/kimi-k2.5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "opencode/kimi-k2.5",
    },
    "visual-engineering": {
      "model": "opencode/kimi-k2.5",
    },
    "writing": {
      "model": "opencode/kimi-k2.5",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models when only Copilot is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "do": {
      "model": "github-copilot/kimi-k2.5",
    },
    "research": {
      "model": "github-copilot/gpt-5-mini",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/kimi-k2.5",
    },
    "deep": {
      "model": "github-copilot/kimi-k2.5",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/kimi-k2.5",
    },
    "ultrabrain": {
      "model": "github-copilot/kimi-k2.5",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "github-copilot/kimi-k2.5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "github-copilot/kimi-k2.5",
    },
    "visual-engineering": {
      "model": "github-copilot/kimi-k2.5",
    },
    "writing": {
      "model": "github-copilot/kimi-k2.5",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for research when only ZAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "do": {
      "model": "opencode/glm-4.7-free",
    },
    "research": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-free",
    },
    "deep": {
      "model": "opencode/glm-4.7-free",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses OpenAI + Copilot combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "do": {
      "model": "github-copilot/kimi-k2.5",
    },
    "research": {
      "model": "github-copilot/gpt-5-mini",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/kimi-k2.5",
    },
    "deep": {
      "model": "github-copilot/kimi-k2.5",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/kimi-k2.5",
    },
    "ultrabrain": {
      "model": "github-copilot/kimi-k2.5",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "github-copilot/kimi-k2.5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "github-copilot/kimi-k2.5",
    },
    "visual-engineering": {
      "model": "github-copilot/kimi-k2.5",
    },
    "writing": {
      "model": "github-copilot/kimi-k2.5",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses ZAI combination (research uses ZAI) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "do": {
      "model": "opencode/glm-4.7-free",
    },
    "research": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-free",
    },
    "deep": {
      "model": "opencode/glm-4.7-free",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all fallback providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "do": {
      "model": "opencode/kimi-k2.5",
    },
    "research": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/kimi-k2.5",
    },
    "deep": {
      "model": "opencode/kimi-k2.5",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/kimi-k2.5",
    },
    "ultrabrain": {
      "model": "opencode/kimi-k2.5",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "opencode/kimi-k2.5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "opencode/kimi-k2.5",
    },
    "visual-engineering": {
      "model": "opencode/kimi-k2.5",
    },
    "writing": {
      "model": "opencode/kimi-k2.5",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/hackefeller/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "do": {
      "model": "opencode/kimi-k2.5",
    },
    "research": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/kimi-k2.5",
    },
    "deep": {
      "model": "opencode/kimi-k2.5",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/kimi-k2.5",
    },
    "ultrabrain": {
      "model": "opencode/kimi-k2.5",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "opencode/kimi-k2.5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "opencode/kimi-k2.5",
    },
    "visual-engineering": {
      "model": "opencode/kimi-k2.5",
    },
    "writing": {
      "model": "opencode/kimi-k2.5",
    },
  },
}
`;
